# pyramid_autowire

./: LICENSE  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci-tests.yml  publish-to-pypi.yml
example/: main.py  pyproject.toml
src/pyramid_autowire/: __init__.py  autowired_view.py  dependency_injection.py  matchdict_injection.py
tests/: conftest.py  test_adapters.py  test_includeme.py  test_match.py  test_positional.py  test_utilities.py
